...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Homepage-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="ViewController" title="Homepage" automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="ViewController" customModule="Destiny_gg" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="q7d-zM-DYc"/>
                        <viewControllerLayoutGuide type="bottom" id="Zkt-qS-rgi"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
...
                                            <rect key="frame" x="20" y="0.0" width="150" height="44"/>
                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                            <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                                        </searchBar>
                                    </barButtonItem>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="gAL-Fx-Wtm"/>
                                    <barButtonItem title="VODs" width="62" id="LAc-sO-iAM"/>
                                    <barButtonItem tag="3" title="Options" id="NZb-zl-rI0">
                                        <connections>
                                            <action selector="barButtonPressed:" destination="BYZ-38-t0r" id="Fk0-9j-yah"/>
                                        </connections>
                                    </barButtonItem>
                                </items>
...
                            <outlet property="dataSource" destination="y90-Eb-8tV" id="xds-1N-BN7"/>
                            <outlet property="delegate" destination="y90-Eb-8tV" id="cVM-RV-M6h"/>
                        </connections>
                    </tableView>
                    <extendedEdge key="edgesForExtendedLayout"/>
                    <navigationItem key="navigationItem" title="VODs" id="Xgt-cY-qXu">
                        <barButtonItem key="leftBarButtonItem" title="Back" id="th1-aY-dBa">
                            <color key="tintColor" red="0.050672061189999999" green="0.1190514734" blue="0.99835759400000001" alpha="1" colorSpace="calibratedRGB"/>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" tag="1" title="Highlight" id="IaQ-rw-WSd">
                            <connections>
                                <action selector="dropDownButtonPressed:" destination="y90-Eb-8tV" id="r6A-xD-D4E"/>
                            </connections>
...
